# chatnoir-resiliparse

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .readthedocs.yaml  Cargo.toml  Dockerfile  MANIFEST.in  README.md  benchmark.py  codecov.yaml  codecov.yml  compile-third-party-libs.sh  fastwarc_cli.py  pyproject.toml  setup.py  setup_base.py  sonar-project.properties  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-docker.yml  build-docs.yml  build-extensions.yml  build-wheels.yml  publish-artifacts.yml
.vcpkg/ports/lexbor/: portfile.cmake  vcpkg.json
.vcpkg/ports/lexbor-shared/: portfile.cmake  vcpkg.json
.vcpkg/triplets/: aarch64-linux.cmake  arm64-osx.cmake  x64-linux.cmake  x64-osx.cmake  x64-windows.cmake
docs/: conf.py  index.rst  requirements.txt
docs/_static/: style.css
docs/api/: beam.rst  extract.rst  fastwarc-stream-io.rst  fastwarc.rst  index.rst  itertools.rst  parse.rst  process-guard.rst
docs/api/beam/: elasticsearch.rst  fileio.rst  textio.rst  warcio.rst
docs/api/extract/: html2text.rst
docs/api/parse/: encoding.rst  html.rst  http.rst  lang.rst
docs/cli/: fastwarc.rst  resiliparse.rst
docs/man/: beam.rst  extract.rst  fastwarc-cli.rst  fastwarc.rst  index.rst  installation.rst  itertools.rst  parse.rst  process-guard.rst
docs/man/extract/: html2text.rst
docs/man/parse/: encoding.rst  html.rst  http.rst  lang.rst
fastwarc/: Cargo.toml  MANIFEST.in  README.md  benchmark.py  cli.py  pyproject.toml  setup.py  stream_io.pxd  stream_io.pyx  tools.pyx  warc.pxd  warc.pyx
fastwarc-py/: pyproject.toml
fastwarc-py/fastwarc/: stream_io.pxd  stream_io.pyi  stream_io.pyx  warc.pxd  warc.pyi  warc.pyx
fastwarc/fastwarc/: __init__.py  benchmark.py  cli.py  stream_io.pxd  stream_io.pyi  stream_io.pyx  tools.pyi  tools.pyx  warc.pxd  warc.pyi  warc.pyx
fastwarc/src/: lib.rs  record.rs  record_test.rs  stream_io.rs
fastwarc/src/stream_io/: gzip.rs  mod.rs  mod_test.rs
resiliparse/: .gitignore  Cargo.toml  MANIFEST.in  README.md  build.rs  itertools.pyx  parse.pxd  parse.pyx  parse_selectolax.pxi  process_guard.pyx  pyproject.toml  setup.py  stream_io.pxd  stream_io.pyx  tools.pyx  warc.pxd  warc.pyx
resiliparse-py/: pyproject.toml
resiliparse-py/resiliparse/parse/_html_rs/: coll.rs  exception.rs  lib.rs  node.rs  tree.rs
resiliparse/input_format/: compressed_stream.pyx
resiliparse/lib/: Cargo.toml  build.rs  lib.rs  mod.rs
resiliparse/lib/parse/: html.rs  mod.rs
resiliparse/lib/parse/html/: css.rs  dom.rs  lexbor.rs  mod.rs  serialize.rs  test.rs  tests.rs  tree.rs
resiliparse/lib/parse/html/dom/: coll.rs  iter.rs  mod.rs  node.rs  node_base.rs  traits.rs
resiliparse/parse/: __init__.pxd  cli.py  content.pyx  encoding.pxd  encoding.pyx  html.pxd  html.pyx  html_benchmark.py  http.pyx  parse_selectolax.pxi
resiliparse/resiliparse/: __init__.py  cli.py  itertools.pyx  process_guard.pxd  process_guard.pyx
resiliparse/resiliparse/beam/: __init__.py  coders.py  elasticsearch.py  fileio.py  textio.py  warcio.py
resiliparse/resiliparse/extract/: html2text.pyx
resiliparse/resiliparse/parse/: __init__.py  _html_rs.pyi  cli.py  encoding.h  encoding.pxd  encoding.pyx  html.h  html.pxd  html.pyx  http.pxd  http.pyx  lang.pxd  lang.pyx  lang_profiles.h
resiliparse/resiliparse/parse/_html_rs/: __init__.pyi  coll.pyi  exception.pyi  node.pyi
resiliparse/resiliparse_common/: string_util.pxd
resiliparse/resiliparse_inc/: algorithm.pxd  cctype.pxd  cstring.pxd  dlfcn.pxd  errno.pxd  lexbor.pxd  lz4frame.pxd  lz4hc.pxd  re2.pxd  string_view.pxd  time.pxd  uchardet.pxd  utility.pxd  zlib.pxd
resiliparse/resiliparse_rust/resiliparse-common/: Cargo.toml  build.rs
resiliparse/resiliparse_rust/resiliparse-common/src/parse/html/: css.rs  lexbor.rs  serialize.rs  test.rs  tree.rs
resiliparse/resiliparse_rust/resiliparse-common/src/parse/html/dom/: coll.rs  iter.rs  mod.rs  node.rs  node_base.rs  traits.rs
resiliparse/resiliparse_rust/resiliparse-py/parse/_html_rs/: Cargo.toml  coll.rs  exception.rs  lib.rs  node.rs  tree.rs
resiliparse/rs/: lib.rs
resiliparse/src/parse/html/: css.rs  lexbor.rs  mod.rs  serialize.rs  test.rs  tree.rs
resiliparse/src/parse/html/dom/: coll.rs  iter.rs  mod.rs  node.rs  traits.rs
resiliparse/stream_io/: compressed_stream.pyx
resiliparse_common/: string_util.pxd
resiliparse_inc/: atomic.pxd  boost_regex.pxd  cstdlib.pxd  lexbor.pxd  lz4frame.pxd  pthread.pxd  re2.pxd  regex.pxd  stdio.pxd  string.pxd  string_view.pxd  unistd.pxd  utility.pxd  zlib.pxd
resiliparse_inc/sys/: time.pxd
tests/: __init__.py  pytest.ini
tests/data/: block-sized-records.warc  block-sized-records.warc.lz4  warcfile.warc  warcfile.warc.lz4
tests/fastwarc/: test_stream_io.py  test_warc.py
tests/resiliparse/: test_itertools.py  test_process_guard.py
tests/resiliparse/beam/: __init__.py  test_elasticsearch.py  test_fileio.py  test_textio.py  test_warcio.py
tests/resiliparse/extract/: test_html2text.py
tests/resiliparse/parse/: test_encoding.py  test_html.py  test_http.py  test_lang.py
