[workspace]
resolver = "2"
members = [
    "fastwarc",
    "resiliparse",
    "resiliparse-py/resiliparse/parse/_html_rs",
]

[workspace.package]
version = "0.16.0"
edition = "2024"
publish = false
description = "A collection of robust and fast processing tools for parsing and analyzing (not only) web archive data."
authors = ["Janek Bevendorff"]
documentation = "https://resiliparse.chatnoir.eu/"

[workspace.dependencies]
bindgen = "0.72.1"
pyo3 = "0.26.0"
pretty_assertions = "1.4.1"
