[workspace]
resolver = "2"
members = [
    "fastwarc",
    "resiliparse",
    "resiliparse-py/resiliparse/parse/_html_rs",
]

[workspace.package]
version = "0.16.0"
edition = "2024"
publish = true
description = "A collection of robust and fast processing tools for parsing and analyzing (not only) web archive data."
authors = ["Janek Bevendorff"]
documentation = "https://resiliparse.chatnoir.eu/"
readme = "README.md"
repository = "https://github.com/chatnoir-eu/chatnoir-resiliparse/"
license = "Apache-2.0"

[workspace.dependencies]
bindgen = "0.72.1"
pyo3 = "0.26.0"
pretty_assertions = "1.4.1"
