[package]
name = "fastwarc"
version.workspace = true
edition.workspace = true
publish.workspace = true
authors.workspace = true
documentation.workspace = true
description = "A high-performance WARC parsing library for Python written in C++/Cython."

[lib]
crate-type = ["lib"]

[dependencies]
data-encoding = "2.10.0"
chrono = "0.4.44"
uuid = { version = "1.18.1", features = ["v4"] }
encoding = "0.2.33"
md-5 = "0.11.0"
sha1 = "0.11.0"
sha2 = "0.11.0"
