[build-system]
requires = ["setuptools>=65.0", "Cython>=0.29.33"]
build-backend = "setuptools.build_meta"

[project]
name = "FastWARC"
version = "0.15.0"
description = "A high-performance WARC parsing library for Python written in C++/Cython."
authors = [
  { name = "Janek Bevendorff" }
]
license = { text = "Apache License 2.0" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "brotli",
  "click",
  "tqdm"
]

[project.urls]
repository = "https://github.com/chatnoir-eu/chatnoir-resiliparse"
homepage = "https://resiliparse.chatnoir.eu"
documentation = "https://resiliparse.chatnoir.eu"

[project.optional-dependencies]
all = []
test = [
  "pytest>=7.2.2",
  "pytest-cov>=4.0.0",
  "lz4"
]

[tool.setuptools.packages.find]
include = ["fastwarc*"]

[tool.setuptools.package-data]
"*" = ["*.pyi"]

[tool.cibuildwheel]
archs = "native"
build = "cp3*"
build-frontend = "build"
test-extras = ["all", "test"]

[tool.cibuildwheel.linux.environment]
CPATH = "/opt/libs/include"
LIBRARY_PATH = "/opt/libs/lib"
LD_LIBRARY_PATH = "/opt/libs/lib"
FORCE_COLOR = "1"

