[workspace]
resolver = "2"
members = [
  "resiliparse_rust/resiliparse-common",
  "resiliparse_rust/resiliparse-py/parse/_html_rs",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
publish = false
description = "Resiliparse Rust library"
authors = ["Janek Bevendorff"]
documentation = "https://resiliparse.chatnoir.eu/"
