[package]
name = "resiliparse"
version.workspace = true
edition.workspace = true
publish.workspace = true
description.workspace = true
authors.workspace = true
documentation.workspace = true
readme = "README.md"
repository.workspace = true
license.workspace = true

[dependencies]
parking_lot = "0.12.5"

[build-dependencies]
bindgen.workspace = true
vcpkg = "0.2"
