[build-system]
requires = ["setuptools>=75.0.0", "Cython>=0.29.33"]
build-backend = "setuptools.build_meta"

[project]
name = "Resiliparse"
version = "0.15.2"
description = "A collection of robust and fast processing tools for parsing and analyzing (not only) web archive data."
authors = [
  { name = "Janek Bevendorff" }
]
license = { text = "Apache License 2.0" }
# TODO: Replace with this once we deprecate Python 3.8 and upgrade to setuptools 77:
# license = "Apache-2.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "fastwarc==0.15.2"
]

[project.urls]
repository = "https://github.com/chatnoir-eu/chatnoir-resiliparse"
homepage = "https://resiliparse.chatnoir.eu"
documentation = "https://resiliparse.chatnoir.eu"

[project.optional-dependencies]
all = [
  "resiliparse[beam,cli]"
]
beam = [
  "apache_beam[aws]>=2.37.0; python_version<'3.12'",
  "boto3>=1.9",
  "elasticsearch>=7.0.0"
]
cli = [
  "click",
  "joblib",
  "tqdm"
]
cli-benchmark = [
  "beautifulsoup4",
  "langid",
  "selectolax"
]
test = [
  "pytest>=7.2.2",
  "pytest-cov>=4.0.0"
]

[project.scripts]
resiliparse = "resiliparse.cli:main"

[tool.setuptools.packages.find]
include = ["resiliparse*"]

[tool.cibuildwheel]
archs = "native"
build = "cp3*"
build-frontend = "build"
test-extras = ["all", "test"]
