[package]
name = "resiliparse-common"
description = "Common Rust modules for Resiliparse"
edition.workspace = true
publish.workspace = true
version.workspace = true
authors.workspace = true
documentation.workspace = true

[lib]
crate-type = ["lib"]

[build-dependencies]
bindgen = "0.70"

[dependencies]
parking_lot = "0.12"
