[package]
name = "resiliparse-parse-html"
edition.workspace = true

[lib]
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
resiliparse-common = { path = "../../../resiliparse-common" }
pyo3.workspace = true
#pyo3-stub-gen.workspace = true

#[[bin]]
#name = "stub_gen"
#path = "bin/stub_gen.rs"
#doc = false
